# scietex.hal.qcm

./: .gitignore  README.md  cspell.json  pyproject.toml
examples/: ftm_one_usb.py  rs485_example.py  rs485_ftm_one_vsn_example.py
src/scietex/hal/qcm/: __init__.py  version.py
src/scietex/hal/qcm/base/: __init__.py  data.py  ftm_calculation.py  gated_ftm.py
src/scietex/hal/qcm/base/rs485/: __init__.py  gated_ftm.py
src/scietex/hal/qcm/base/serial/: __init__.py  gated_ftm.py
src/scietex/hal/qcm/cyky/: __init__.py  tm106b.py
src/scietex/hal/qcm/scietex/: __init__.py  ftm_one.py  ftm_one_usb.py
