[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scietex.hal.qcm"
dynamic = ["version"]
description = "Scietex Quartz Microbalance HAL package"
authors = [{ name = "Anton Bondarenko", email = "bond.anton@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "msgspec[yaml] >= 0.20.0",
  "scietex.hal.serial >= 1.3.0, < 2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/bond-anton/scietex.hal.qcm"
"Bug Tracker" = "https://github.com/bond-anton/scietex.hal.qcm/issues"

[project.optional-dependencies]
dev = ["tox>=4.45.0"]
test = ["flake8", "pytest", "pytest-asyncio"]
lint = ["ruff"]

[tool.setuptools.dynamic]
version = { attr = "scietex.hal.qcm.version.__version__" }

[tool.setuptools.package-data]
"scietex.hal.qcm" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
